Refactor controllers package
