# services/controllers/charts/models.go
@@ -1,0 +1,10 @@
+package chartscontroller
+
+type (
+	chartsNormalizedRequest struct {
+		Coin            uint
+		Token, Currency string
+		TimeStart       int64
+		MaxItems        int
+	}
+)
